CREATE TABLE IF NOT EXISTS users (
		id INTEGER PRIMARY KEY AUTOINCREMENT,
		username CHAR(50) UNIQUE,
		first_name CHAR(50) NOT NULL,
		last_name CHAR(50) NOT NULL,
		birthday DATE NOT NULL,
		created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP, 
		password VARCHAR(255) NOT NULL,
		email CHAR(50),
		account_status BOOLEAN DEFAULT 1
	);

	CREATE TABLE IF NOT EXISTS groups (
		id INTEGER PRIMARY KEY AUTOINCREMENT,
		group_name CHAR(50) NOT NULL,
		created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
		description VARCHAR(255)
	);

	CREATE TABLE IF NOT EXISTS group_members (
		id INTEGER PRIMARY KEY AUTOINCREMENT,
		user_id INTEGER NOT NULL,
		group_id INTEGER NOT NULL,
		FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE,
		FOREIGN KEY (group_id) REFERENCES groups(id) ON DELETE CASCADE
	);